Change app name (lowercase) and change validation/error messages

--- a/examples/dbp-greenlight/index.html
+++ b/examples/dbp-greenlight/index.html
@@ -114,7 +114,7 @@
         </dbp-translated>
     </template>
     <template slot="title">
-        University Greenlight
+        University greenlight
     </template>
     <template slot="logo">
         <img height="100" src="/logo.png" />
