Fix topic.metadata.json name

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -70,7 +70,7 @@
     show-preselected="true"
     file-handling-enabled-targets="local"
     html-overrides="global-override"
-    src="/dbp-greenlight.topic.metadata.json"
+    src="/topic.metadata.json"
     base-path="/"
     keycloak-config='{"url": "https://auth-dev.tugraz.at/auth", "realm": "tugraz-vpu", "clientId": "auth-dev-mw-frontend-local", "silentCheckSsoRedirectUri": "/silent-check-sso.html"}'
 ><dbp-loading-spinner></dbp-loading-spinner>
