Move the appshell slots to global overrides

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -74,18 +74,22 @@
     base-path="/"
     keycloak-config='{"url": "https://auth-dev.tugraz.at/auth", "realm": "tugraz-vpu", "clientId": "auth-dev-mw-frontend-local", "silentCheckSsoRedirectUri": "/silent-check-sso.html"}'
 ><dbp-loading-spinner></dbp-loading-spinner>
-<template slot="name">
-    DBP<br />
-    <dbp-translated subscribe="lang">
-        <div slot="de">
-            Meine Universität
-        </div>
-        <div slot="en">
-            My University
-        </div>
-    </dbp-translated>
-</template>
 </dbp-greenlight>
+
+<template id="global-override">
+    <template id="dbp-greenlight">
+        <div slot="name">
+            DBP<br />
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    Meine Universität
+                </div>
+                <div slot="en">
+                    My University
+                </div>
+            </dbp-translated>
+        </div>
+    </template>
 
 <!-- Error handling for too old browsers -->
 <script src="/app/local/@dbp-topics/greenlight/browser-check.js" defer></script>
