Move the appshell slots to global overrides

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -90,6 +90,7 @@
             </dbp-translated>
         </div>
     </template>
+</template>
 
 <!-- Error handling for too old browsers -->
 <script src="/app/local/@dbp-topics/greenlight/browser-check.js" defer></script>
