Revert last changes

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -77,7 +77,7 @@
 </dbp-greenlight>
 
 <template id="global-override">
-    <div id="dbp-greenlight">
+    <template id="dbp-greenlight">
         <div slot="name">
             DBP<br />
             <dbp-translated subscribe="lang">
@@ -89,7 +89,7 @@
                 </div>
             </dbp-translated>
         </div>
-    </div>
+    </template>
 </template>
 
 <!-- Error handling for too old browsers -->
