Disable CSP header and update API and Keycloak URLs in app-template

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -63,7 +63,7 @@
 <dbp-greenlight
     provider-root
     id="app"
-    lang="de" entry-point-url="http://127.0.0.1:8000"
+    lang="de" entry-point-url="https://api-demo.tugraz.at"
     gp-search-hash-string="HC1:"
     gp-search-self-test-string-array="https://selbsttest.stmk.gv.at/public-result?id=,https://selbsttest.ktn.gv.at/public-result?id="
     preselected-option="My University"
@@ -72,7 +72,7 @@
     html-overrides="global-override"
     src="/topic.metadata.json"
     base-path="/"
-    keycloak-config='{"url": "https://auth-dev.tugraz.at/auth", "realm": "tugraz-vpu", "clientId": "auth-dev-mw-frontend-local", "silentCheckSsoRedirectUri": "/silent-check-sso.html"}'
+    keycloak-config='{"url": "https://auth-demo.tugraz.at/auth", "realm": "tugraz-vpu", "clientId": "auth-dev-mw-frontend-local", "silentCheckSsoRedirectUri": "/silent-check-sso.html"}'
 ><dbp-loading-spinner></dbp-loading-spinner>
 </dbp-greenlight>
 
