--- a/app-template/index.html
+++ b/app-template/index.html
@@ -44,6 +44,8 @@
             font-family: 'Source Sans Pro', 'Calibri', 'Arial', 'sans-serif';
             font-weight: 300;
             margin: 0;
+            background-color: var(--dbp-override-base-light, white);
+            color: var(--dbp-override-text-dark, black);
         }
 
         /* style override */
