Add again hover effect and change it to default none

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -73,8 +73,8 @@
             --dbp-override-border-light: 1px solid #ffffff;
             --dbp-override-border-dark: 1px solid #000000;
             --dbp-border-radius: 0px;
-            --dbp-override-button-hover-base: #000000;
-            --dbp-override-button-hover-text: #ffffff;
+            --dbp-override-hover-base: inherit;
+            --dbp-override-hover-text: inherit;
             */
         }
     </style>
