Adapt app template

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -50,31 +50,68 @@
 
         /* style override */
         html {
-            /*--dbp-override-base-light: #ffffff;
-            --dbp-override-base-dark: #000000;
-            --dbp-override-text-light: #ffffff;
-            --dbp-override-text-dark: #000000;
-            --dbp-override-text-muted-light: #adadad;
-            --dbp-override-text-muted-dark: #767676;
-            --dbp-override-accent-light: #c24f68;
-            --dbp-override-accent-dark: #c24f68;
-            --dbp-override-primary-light: #8ca4eb;
-            --dbp-override-primary-dark: #2a4491;
-            --dbp-override-secondary-light: #ffffff;
-            --dbp-override-secondary-dark: #000000;
-            --dbp-override-info-light: #8ca4eb;
-            --dbp-override-info-dark: #2a4491;
-            --dbp-override-success-light: #7acc79;
-            --dbp-override-success-dark: #188018;
-            --dbp-override-warning-light: #f99a41;
-            --dbp-override-warning-dark: #c15500;
-            --dbp-override-danger-light: #ff887a;
-            --dbp-override-danger-dark: #de3535;
-            --dbp-override-border-light: 1px solid #ffffff;
-            --dbp-override-border-dark: 1px solid #000000;
-            --dbp-border-radius: 0px;
-            --dbp-override-hover-base: inherit;
-            --dbp-override-hover-text: inherit;
+        }
+
+        .light-theme{
+            /* You must not fill out all vars, if they are not filled in, it would take an appropriate default value */
+            /*
+            --dbp-override-base: white;
+            --dbp-override-base-inverted: black;
+            --dbp-override-text: black;
+            --dbp-override-text-inverted: white;
+            --dbp-override-text-muted: #767676;
+            --dbp-override-accent: #c24f68;
+            --dbp-override-primary-base: #2a4491;
+            --dbp-override-primary-text: white;
+            --dbp-override-primary-border: 1px solid #2a4491;
+            --dbp-override-secondary-base: white;
+            --dbp-override-secondary-text: black;
+            --dbp-override-secondary-border: 1px solid black;
+            --dbp-override-info: #2a4491;
+            --dbp-override-success: #188018;
+            --dbp-override-warning-as-text: #c15500;
+            --dbp-override-warning: #f99a41;
+            --dbp-override-danger: #de3535;
+            --dbp-override-border: 1px solid black;
+            --dbp-override-border-radius: 0px;
+            */
+
+            /* Remove hover vars if you don't want a hover effect */
+            /*
+            --dbp-override-hover-base: black;
+            --dbp-override-hover-text: white;
+            */
+        }
+
+        .dark-theme{
+            /* If you don't want to use an additional theme, then delete the "themes" attribute */
+            /* You have to fill out all vars, if you want to use the dark theme, the default values would be the light theme. */
+            /*
+            --dbp-override-base: #151515;
+            --dbp-override-base-inverted: white;
+            --dbp-override-text: white;
+            --dbp-override-text-inverted: black;
+            --dbp-override-text-muted: #666666;
+            --dbp-override-accent: #c24f68;
+            --dbp-override-primary-base: #8ca4eb;
+            --dbp-override-primary-text: black;
+            --dbp-override-primary-border: 1px solid #8ca4eb;
+            --dbp-override-secondary-base: black;
+            --dbp-override-secondary-text: white;
+            --dbp-override-secondary-border: 1px solid white;
+            --dbp-override-info: #8ca4eb;
+            --dbp-override-success: #7acc79;
+            --dbp-override-warning-as-text: #f99a41;
+            --dbp-override-warning: #f99a41;
+            --dbp-override-danger: #de3535;
+            --dbp-override-border: 1px solid white;
+            --dbp-override-border-radius: 0px;
+            */
+
+            /* Remove hover vars if you don't want a hover effect */
+            /*
+            --dbp-override-hover-base: white;
+            --dbp-override-hover-text: black;
             */
         }
     </style>
@@ -94,6 +131,8 @@
     src="/topic.metadata.json"
     base-path="/"
     keycloak-config='{"url": "https://auth-demo.tugraz.at/auth", "realm": "tugraz-vpu", "clientId": "auth-dev-mw-frontend-local", "silentCheckSsoRedirectUri": "/app/silent-check-sso.html"}'
+    themes='[{"class": "light-theme", "icon": "sun", "name": "Light Mode"},
+            {"class": "dark-theme", "icon": "night", "name": "Dark Mode"}]'
 ><dbp-loading-spinner></dbp-loading-spinner>
 </dbp-greenlight>
 
