Adapt dark theme styles

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -54,7 +54,6 @@
 
         .light-theme{
             /* You must not fill out all vars, if they are not filled in, it would take an appropriate default value */
-            /*
             --dbp-override-base: white;
             --dbp-override-base-inverted: black;
             --dbp-override-text: black;
@@ -74,29 +73,28 @@
             --dbp-override-danger: #de3535;
             --dbp-override-border: 1px solid black;
             --dbp-override-border-radius: 0px;
-            */
 
             /* Remove hover vars if you don't want a hover effect */
-            /*
+
             --dbp-override-hover-base: black;
             --dbp-override-hover-text: white;
-            */
+
         }
 
         .dark-theme{
             /* If you don't want to use an additional theme, then delete the "themes" attribute */
             /* You have to fill out all vars, if you want to use the dark theme, the default values would be the light theme. */
-            /*
+
             --dbp-override-base: #151515;
             --dbp-override-base-inverted: white;
             --dbp-override-text: white;
-            --dbp-override-text-inverted: black;
+            --dbp-override-text-inverted: #151515;
             --dbp-override-text-muted: #666666;
             --dbp-override-accent: #c24f68;
             --dbp-override-primary-base: #8ca4eb;
-            --dbp-override-primary-text: black;
+            --dbp-override-primary-text: #151515;
             --dbp-override-primary-border: 1px solid #8ca4eb;
-            --dbp-override-secondary-base: black;
+            --dbp-override-secondary-base: #151515;
             --dbp-override-secondary-text: white;
             --dbp-override-secondary-border: 1px solid white;
             --dbp-override-info: #8ca4eb;
@@ -106,13 +104,13 @@
             --dbp-override-danger: #de3535;
             --dbp-override-border: 1px solid white;
             --dbp-override-border-radius: 0px;
-            */
+
 
             /* Remove hover vars if you don't want a hover effect */
-            /*
+
             --dbp-override-hover-base: white;
-            --dbp-override-hover-text: black;
-            */
+            --dbp-override-hover-text: #151515;
+
         }
     </style>
 </head>
