--- a/app-template/index.html
+++ b/app-template/index.html
@@ -69,6 +69,7 @@
             --dbp-override-info: #2a4491;
             --dbp-override-success: #188018;
             --dbp-override-warning-as-text: #c15500;
+            --dbp-override-warning-text: black;
             --dbp-override-warning: #f99a41;
             --dbp-override-danger: #de3535;
             --dbp-override-border: 1px solid black;
@@ -100,6 +101,7 @@
             --dbp-override-info: #8ca4eb;
             --dbp-override-success: #7acc79;
             --dbp-override-warning-as-text: #f99a41;
+            --dbp-override-warning-text: black;
             --dbp-override-warning: #f99a41;
             --dbp-override-danger: #de3535;
             --dbp-override-border: 1px solid white;
