Adapt app template

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="white"/>
 
+    <!-- Meta Data for Search Engines -->
+    <meta title="greenlight - Dein Eintrittsticket in die Universität | My University">
+    <meta name="description" content="Erstellen Sie ein Eintrittsticket mit greenlight und importieren Sie Ihren Nachweis, um ihn so schon vor dem Besuch der Universität für den Eintritt zu validieren." />
+
+    <!-- Meta Data for open graph(facebook & co) -->
+    <meta property="og:locale" content="de_DE" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="greenlight: Dein Eintrittsticket in die Universität | My University" />
+    <meta property="og:description" content="Erstellen Sie ein Eintrittsticket mit greenlight und importieren Sie Ihren Nachweis, um ihn so schon vor dem Besuch der Universität für den Eintritt zu validieren." />
+    <meta property="og:url" content="https://greenlight.my-university.at/" />
+    <meta property="og:site_name" content="greenlight" />
+
     <!-- Favicons -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" sizes="any">
@@ -44,8 +56,8 @@
             font-family: 'Source Sans Pro', 'Calibri', 'Arial', 'sans-serif';
             font-weight: 300;
             margin: 0;
-            background-color: var(--dbp-override-base-light, white);
-            color: var(--dbp-override-text-dark, black);
+            background-color: var(--dbp-override-base, white);
+            color: var(--dbp-override-text, black);
         }
 
         /* style override */
@@ -70,13 +82,12 @@
             --dbp-override-success: #188018;
             --dbp-override-warning-as-text: #c15500;
             --dbp-override-warning-text: black;
-            --dbp-override-warning: #f99a41;
+            --dbp-override-warning: #ffad4d;
             --dbp-override-danger: #de3535;
             --dbp-override-border: 1px solid black;
             --dbp-override-border-radius: 0px;
 
             /* Remove hover vars if you don't want a hover effect */
-
             --dbp-override-hover-base: black;
             --dbp-override-hover-text: white;
 
@@ -102,14 +113,13 @@
             --dbp-override-success: #7acc79;
             --dbp-override-warning-as-text: #f99a41;
             --dbp-override-warning-text: black;
-            --dbp-override-warning: #f99a41;
+            --dbp-override-warning: #ffad4d;
             --dbp-override-danger: #de3535;
             --dbp-override-border: 1px solid white;
             --dbp-override-border-radius: 0px;
 
 
             /* Remove hover vars if you don't want a hover effect */
-
             --dbp-override-hover-base: white;
             --dbp-override-hover-text: #151515;
 
