--- a/app-template/index.html
+++ b/app-template/index.html
@@ -48,6 +48,7 @@
 
     <!-- Font related CSS -->
     <style>
+        /* How to customize the app read: https://dbp-demo.tugraz.at/dev-guide/frontend/theming/ */
         @import "/app/local/@dbp-topics/greenlight/fonts/source-sans-pro/300.css";
         @import "/app/local/@dbp-topics/greenlight/fonts/source-sans-pro/400.css";
         @import "/app/local/@dbp-topics/greenlight/fonts/source-sans-pro/600.css";
@@ -56,8 +57,6 @@
             font-family: 'Source Sans Pro', 'Calibri', 'Arial', 'sans-serif';
             font-weight: 300;
             margin: 0;
-            background-color: var(--dbp-override-base, white);
-            color: var(--dbp-override-text, black);
         }
 
         /* style override */
@@ -65,64 +64,52 @@
         }
 
         .light-theme{
-            /* You must not fill out all vars, if they are not filled in, it would take an appropriate default value */
-            --dbp-override-base: white;
-            --dbp-override-base-inverted: black;
-            --dbp-override-text: black;
-            --dbp-override-text-inverted: white;
-            --dbp-override-text-muted: #767676;
+            --dbp-override-background: white;
+            --dbp-override-content: black;
+
+            --dbp-override-primary: #2a4491;
+            --dbp-override-secondary: black;
+            --dbp-override-secondary-surface: white;
+            --dbp-override-on-secondary-surface: black;
+            --dbp-override-secondary-surface-border-color: black;
+
+            --dbp-override-muted: #767676;
             --dbp-override-accent: #c24f68;
-            --dbp-override-primary-base: #2a4491;
-            --dbp-override-primary-text: white;
-            --dbp-override-primary-border: 1px solid #2a4491;
-            --dbp-override-secondary-base: white;
-            --dbp-override-secondary-text: black;
-            --dbp-override-secondary-border: 1px solid black;
             --dbp-override-info: #2a4491;
             --dbp-override-success: #188018;
-            --dbp-override-warning-as-text: #c15500;
-            --dbp-override-warning-text: black;
-            --dbp-override-warning: #ffad4d;
+            --dbp-override-warning: #c15500;
+            --dbp-override-warning-surface: #ffad4d;
+            --dbp-override-on-warning-surface: black;
             --dbp-override-danger: #de3535;
+
             --dbp-override-border: 1px solid black;
-            --dbp-override-border-radius: 0px;
 
-            /* Remove hover vars if you don't want a hover effect */
-            --dbp-override-hover-base: black;
-            --dbp-override-hover-text: white;
-
+            --dbp-override-hover-background-color: black;
+            --dbp-override-hover-color: white;
         }
 
         .dark-theme{
-            /* If you don't want to use an additional theme, then delete the "themes" attribute */
-            /* You have to fill out all vars, if you want to use the dark theme, the default values would be the light theme. */
+            --dbp-override-background: #151515;
+            --dbp-override-content: white;
 
-            --dbp-override-base: #151515;
-            --dbp-override-base-inverted: white;
-            --dbp-override-text: white;
-            --dbp-override-text-inverted: #151515;
-            --dbp-override-text-muted: #666666;
+            --dbp-override-primary: #8ca4eb;
+            --dbp-override-secondary: white;
+            --dbp-override-secondary-surface: #151515;
+            --dbp-override-on-secondary-surface: white;
+            --dbp-override-secondary-surface-border-color: #151515;
+
+            --dbp-override-muted: #666666;
             --dbp-override-accent: #c24f68;
-            --dbp-override-primary-base: #8ca4eb;
-            --dbp-override-primary-text: #151515;
-            --dbp-override-primary-border: 1px solid #8ca4eb;
-            --dbp-override-secondary-base: #151515;
-            --dbp-override-secondary-text: white;
-            --dbp-override-secondary-border: 1px solid white;
             --dbp-override-info: #8ca4eb;
             --dbp-override-success: #7acc79;
-            --dbp-override-warning-as-text: #f99a41;
-            --dbp-override-warning-text: black;
-            --dbp-override-warning: #ffad4d;
+            --dbp-override-warning: #f99a41;
+            --dbp-override-on-warning-surface: black;
             --dbp-override-danger: #de3535;
+
             --dbp-override-border: 1px solid white;
-            --dbp-override-border-radius: 0px;
 
-
-            /* Remove hover vars if you don't want a hover effect */
-            --dbp-override-hover-base: white;
-            --dbp-override-hover-text: #151515;
-
+            --dbp-override-hover-background-color: white;
+            --dbp-override-hover-color: #151515;
         }
     </style>
 </head>
