--- a/app-template/index.html
+++ b/app-template/index.html
@@ -49,67 +49,65 @@
     <!-- Font related CSS -->
     <style>
         /* How to customize the app read: https://dbp-demo.tugraz.at/dev-guide/frontend/theming/ */
-        @import "/app/local/@dbp-topics/greenlight/fonts/source-sans-pro/300.css";
-        @import "/app/local/@dbp-topics/greenlight/fonts/source-sans-pro/400.css";
-        @import "/app/local/@dbp-topics/greenlight/fonts/source-sans-pro/600.css";
+
+        @import "/app/local/@dbp-topics/greenlight/fonts/nunito-sans/300.css') %>";
+        @import "/app/local/@dbp-topics/greenlight/nunito-sans/300-italic.css') %>";
+        @import "/app/local/@dbp-topics/greenlight/fonts/nunito-sans/600.css') %>";
+        @import "/app/local/@dbp-topics/greenlight/fonts/nunito-sans/600-italic.css') %>";
+
 
         body {
-            font-family: 'Source Sans Pro', 'Calibri', 'Arial', 'sans-serif';
-            font-weight: 300;
+            font-family: 'Nunito Sans', 'Calibri', 'Arial', 'sans-serif';
+            line-height: 1.4em;
+            font-weight: 400;
             margin: 0;
         }
 
-        /* style override */
-        html {
-        }
 
         .light-theme{
             --dbp-override-background: white;
-            --dbp-override-content: black;
+            --dbp-override-content: #222120;
 
-            --dbp-override-primary: #2a4491;
-            --dbp-override-secondary: black;
+            --dbp-override-primary: #3775c1;
+            --dbp-override-secondary: #222120;
             --dbp-override-secondary-surface: white;
-            --dbp-override-on-secondary-surface: black;
-            --dbp-override-secondary-surface-border-color: black;
+            --dbp-override-on-secondary-surface: #222120;
+            --dbp-override-secondary-surface-border-color: #222120;
 
             --dbp-override-muted: #767676;
-            --dbp-override-accent: #c24f68;
-            --dbp-override-info: #2a4491;
-            --dbp-override-success: #188018;
-            --dbp-override-warning: #c15500;
-            --dbp-override-warning-surface: #ffad4d;
-            --dbp-override-on-warning-surface: black;
-            --dbp-override-danger: #de3535;
+            --dbp-override-accent: #9e1e4d;
+            --dbp-override-info: #38808a;
+            --dbp-override-success: #338555;
+            --dbp-override-success-surface: #5ec189;
+            --dbp-override-on-success-surface: #222120;
+            --dbp-override-warning: #bf8808;
+            --dbp-override-warning-surface: #f9cc66;
+            --dbp-override-on-warning-surface: #222120;
+            --dbp-override-danger: #cc3232;
 
-            --dbp-override-border: 1px solid black;
-
-            --dbp-override-hover-background-color: black;
-            --dbp-override-hover-color: white;
+            --dbp-override-border: 1px solid #222120;
         }
 
         .dark-theme{
-            --dbp-override-background: #151515;
+            --dbp-override-background: #222120;
             --dbp-override-content: white;
 
-            --dbp-override-primary: #8ca4eb;
+            --dbp-override-primary: #3775c1;
             --dbp-override-secondary: white;
-            --dbp-override-secondary-surface: #151515;
+            --dbp-override-secondary-surface: #222120;
             --dbp-override-on-secondary-surface: white;
-            --dbp-override-secondary-surface-border-color: #151515;
+            --dbp-override-secondary-surface-border-color: white;
 
-            --dbp-override-muted: #666666;
-            --dbp-override-accent: #c24f68;
-            --dbp-override-info: #8ca4eb;
-            --dbp-override-success: #7acc79;
-            --dbp-override-warning: #f99a41;
-            --dbp-override-on-warning-surface: black;
-            --dbp-override-danger: #de3535;
+            --dbp-override-muted: #767676;
+            --dbp-override-accent: #C13F6F;
+            --dbp-override-info: #38808a;
+            --dbp-override-success: #222120;
+            --dbp-override-success-surface: #5ec189;
+            --dbp-override-on-success-surface: #222120;
+            --dbp-override-warning: #f9cc66;
+            --dbp-override-danger: #cc3232;
 
             --dbp-override-border: 1px solid white;
-
-            --dbp-override-hover-background-color: white;
-            --dbp-override-hover-color: #151515;
         }
     </style>
 </head>
