--- a/examples/dbp-show-reference-ticket/index.html
+++ b/examples/dbp-show-reference-ticket/index.html
@@ -7,7 +7,7 @@
     <!-- Package bundles-->
     <script type="module" src="https://unpkg.com/@dbp-toolkit/provider@latest/dist/dbp-provider.js"></script>
     <script type="module" src="https://unpkg.com/@dbp-toolkit/auth@latest/dist/dbp-auth.js"></script>
-    <script type="module" src="https://unpkg.com/@dbp-topics/greenlight@latest/dist/dbp-acquire-3g-ticket.js"></script>
+    <script type="module" src="https://unpkg.com/@dbp-topics/greenlight@latest/dist/dbp-show-reference-ticket.js"></script>
 
     <!-- Prevent Chrome/Edge from suggesting to translate the page -->
     <meta name="google" content="notranslate">
@@ -34,23 +34,9 @@
 
 <body>
 
-    <dbp-provider auth requested-login-status analytics-event lang="de" entry-point-url="https://api-dev.tugraz.at">
-        <dbp-auth-keycloak client-id="auth-dev-mw-frontend-local"
-                           idp-hint=""
-                           realm="tugraz-vpu"
-                           scope=""
-                           silent-check-sso-redirect-uri="./silent-check-sso.html"
-                           subscribe="requested-login-status,entry-point-url,lang"
-                           try-login=""
-                           url="https://auth-dev.tugraz.at/auth"
-        ></dbp-auth-keycloak>
-        <dbp-login-button subscribe="auth,lang"></dbp-login-button>
-        <dbp-acquire-3g-ticket subscribe="lang,entry-point-url,auth"
-                              gp-search-hash-string="HC1:"
-                              gp-search-self-test-string-array="https://selbsttest.stmk.gv.at/public-result?id=,https://selbsttest.ktn.gv.at/public-result?id="
-                              preselected-option="University"
-                              file-handling-enabled-targets="local"
-        ></dbp-acquire-3g-ticket>
+    <dbp-provider requested-login-status analytics-event lang="de" entry-point-url="https://api-dev.tugraz.at">
+        <dbp-show-reference-ticket subscribe="lang,entry-point-url"
+        ></dbp-show-reference-ticket>
     </dbp-provider>
 
 </body>
