--- a/app-template/index.html
+++ b/app-template/index.html
@@ -19,21 +19,15 @@
 
     <!-- Favicons -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" sizes="any">
-
-    <!-- PWA manifest file -->
-    <link rel="manifest" href="/app.manifest.json">
-
-    <!-- PWA iphone -->
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/icon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/icon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/app.webmanifest">
     <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#e4154b">
+    <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
-
-    <!-- PWA Windows -->
-    <meta name="msapplication-config" content="/browserconfig.xml">
-
+    
     <!-- Loading spinner -->
     <script type="module">
         import {Spinner} from '/app/local/@dbp-topics/greenlight/spinner.js';
@@ -50,25 +44,22 @@
     <style>
         /* How to customize the app read: https://dbp-demo.tugraz.at/dev-guide/frontend/theming/ */
 
-        @import "/app/local/@dbp-topics/greenlight/fonts/nunito-sans/300.css') %>";
-        @import "/app/local/@dbp-topics/greenlight/nunito-sans/300-italic.css') %>";
-        @import "/app/local/@dbp-topics/greenlight/fonts/nunito-sans/600.css') %>";
-        @import "/app/local/@dbp-topics/greenlight/fonts/nunito-sans/600-italic.css') %>";
-
-
+        @import "/app/local/@dbp-topics/greenlight/fonts/source-sans-pro/300.css";
+        @import "/app/local/@dbp-topics/greenlight/fonts/source-sans-pro/400.css";
+        @import "/app/local/@dbp-topics/greenlight/fonts/source-sans-pro/600.css";
+        
         body {
-            font-family: 'Nunito Sans', 'Calibri', 'Arial', 'sans-serif';
-            line-height: 1.4em;
-            font-weight: 400;
+            font-family: 'Source Sans Pro', 'Calibri', 'Arial', 'sans-serif';
+            font-weight: 300;
             margin: 0;
         }
-
 
         .light-theme{
             --dbp-override-background: white;
             --dbp-override-content: #222120;
 
             --dbp-override-primary: #3775c1;
+            --dbp-override-on-primary-surface: white;
             --dbp-override-secondary: #222120;
             --dbp-override-secondary-surface: white;
             --dbp-override-on-secondary-surface: #222120;
@@ -92,20 +83,20 @@
             --dbp-override-background: #222120;
             --dbp-override-content: white;
 
-            --dbp-override-primary: #3775c1;
+            --dbp-override-primary: #398BDA;
+            --dbp-override-on-primary-surface: white;
+
             --dbp-override-secondary: white;
             --dbp-override-secondary-surface: #222120;
             --dbp-override-on-secondary-surface: white;
             --dbp-override-secondary-surface-border-color: white;
 
-            --dbp-override-muted: #767676;
-            --dbp-override-accent: #C13F6F;
-            --dbp-override-info: #38808a;
-            --dbp-override-success: #222120;
-            --dbp-override-success-surface: #5ec189;
-            --dbp-override-on-success-surface: #222120;
+            --dbp-override-muted: #8D8B8B;
+            --dbp-override-accent: #bc3a62;
+            --dbp-override-info: #3793A5;
+            --dbp-override-success: #5ec189;
             --dbp-override-warning: #f9cc66;
-            --dbp-override-danger: #cc3232;
+            --dbp-override-danger: #EB534E;
 
             --dbp-override-border: 1px solid white;
         }
