Rename the package name to @digital-blueprint/greenlight-app

--- a/examples/dbp-acquire-3g-ticket/index.html
+++ b/examples/dbp-acquire-3g-ticket/index.html
@@ -7,7 +7,7 @@
     <!-- Package bundles-->
     <script type="module" src="https://unpkg.com/@dbp-toolkit/provider@latest/dist/dbp-provider.js"></script>
     <script type="module" src="https://unpkg.com/@dbp-toolkit/auth@latest/dist/dbp-auth.js"></script>
-    <script type="module" src="https://unpkg.com/@dbp-topics/greenlight@latest/dist/dbp-acquire-3g-ticket.js"></script>
+    <script type="module" src="https://unpkg.com/@digital-blueprint/greenlight-app@latest/dist/dbp-acquire-3g-ticket.js"></script>
 
     <!-- Prevent Chrome/Edge from suggesting to translate the page -->
     <meta name="google" content="notranslate">
