--- a/examples/dbp-greenlight/index.html
+++ b/examples/dbp-greenlight/index.html
@@ -6,39 +6,39 @@
     <meta name="theme-color" content="white"/>
 
     <!-- Favicons -->
-    <link rel="shortcut icon" type="image/x-icon" href="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/favicon.svg" sizes="any">
+    <link rel="shortcut icon" type="image/x-icon" href="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/favicon.svg" sizes="any">
 
     <!-- PWA manifest file -->
-    <link rel="manifest" href="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/dbp-greenlight.manifest.json">
+    <link rel="manifest" href="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/dbp-greenlight.manifest.json">
 
     <!-- PWA iphone -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/favicon-16x16.png">
-    <link rel="mask-icon" href="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/safari-pinned-tab.svg" color="#e4154b">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/favicon-16x16.png">
+    <link rel="mask-icon" href="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/safari-pinned-tab.svg" color="#e4154b">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
 
     <!-- PWA Windows -->
-    <meta name="msapplication-config" content="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/dbp-greenlight.browserconfig.xml">
+    <meta name="msapplication-config" content="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/dbp-greenlight.browserconfig.xml">
 
     <!-- Loading spinner -->
     <script type="module">
-        import {Spinner} from 'https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/spinner.js';
+        import {Spinner} from 'https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/spinner.js';
         customElements.define('dbp-loading-spinner', Spinner);
     </script>
 
     <!-- App bundles-->
-    <script type="module" src="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/dbp-greenlight.js"></script>
+    <script type="module" src="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/dbp-greenlight.js"></script>
 
     <!-- Prevent Chrome/Edge from suggesting to translate the page -->
     <meta name="google" content="notranslate">
 
     <!-- Font related CSS -->
     <style>
-        @import "https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/fonts/source-sans-pro/300.css";
-        @import "https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/fonts/source-sans-pro/400.css";
-        @import "https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/fonts/source-sans-pro/600.css";
+        @import "https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/fonts/source-sans-pro/300.css";
+        @import "https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/fonts/source-sans-pro/400.css";
+        @import "https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/fonts/source-sans-pro/600.css";
 
         body {
             font-family: 'Source Sans Pro', 'Calibri', 'Arial', 'sans-serif';
@@ -95,7 +95,7 @@
         gp-search-self-test-string-array="https://selbsttest.stmk.gv.at/public-result?id=,https://selbsttest.ktn.gv.at/public-result?id="
         preselected-option="University"
         file-handling-enabled-targets="local"
-        src="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/dbp-greenlight.topic.metadata.json"
+        src="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/dbp-greenlight.topic.metadata.json"
         base-path="/"
         keycloak-config='{"url": "https://auth-dev.tugraz.at/auth", "realm": "tugraz-vpu", "clientId": "auth-dev-mw-frontend-local", "silentCheckSsoRedirectUri": "/silent-check-sso.html"}'
         env='local'
@@ -156,7 +156,7 @@
 </template>
 
 <!-- Error handling for too old browsers -->
-<script src="https://unpkg.com/@dbp-topics/greenlight@0.1.2/dist/local/@dbp-topics/greenlight/browser-check.js" defer></script>
+<script src="https://unpkg.com/@digital-blueprint/greenlight-app@0.1.2/dist/local/@digital-blueprint/greenlight-app/browser-check.js" defer></script>
 <noscript>Diese Applikation benötigt Javascript / This application requires Javascript</noscript>
 </body>
 </html>
